--- a/assignments/lesson-9/styles/medium-8.css
+++ b/assignments/lesson-9/styles/medium-8.css
@@ -1,60 +1,129 @@
 /* To run media query for medium screens */
 @media screen and (min-width:501px) {
 
-        body, header, nav, main, address, footer { 
-            margin: auto;
-            width: 100%;
-            height: 100%;  }
-    
-        main div.weather5Day { 
-            display: block; }
-    
-        header section h1 {
-            text-align: center;
-            color: #e7ecef;}
+    body, header, nav, main, address, footer { 
+        margin: auto;
+        width: 100%;
+        height: 100%;  }
+
+    main div.weather5Day { 
+        display: block; }
+
+    header section h1 {
+        text-align: center;
+        color: #e7ecef;}
+
+    @media screen and (min-width: 501px) {
+    div.format {
+        position: absolute;
+            left: 5%;
+            top: 44%;   }    }        
     
     
         /* Weather for 5 Day Forecast section and comments */
-        main div.weather5Day {
-            width: 90%;
-            margin: 0;
-            text-align: center;
-            align-content:center;       }
-    
-        main div h3.weatherTableTitle {
-            text-align: center;
-            font-size: 150%;
-            font-weight: bold;        }
-    
-        /* Weather images for webpage provided by openclipart.org - Public Domain */
-        main div table {
-            margin: auto;
+
+        #weather5Day {
+            display: grid;
+            grid-template-columns: repeat(5,90px);
+            grid-template-rows: 45px,45px, 60px, 45px;
             justify-content: center;
-            text-align: center;
-            color: #8b8c89;
-            width: 60%;
-            padding: 2px;
+            align-content: center;
         
-            z-index: 10;}   
-    
-        th {
-            background-color: #274c77;
-            border: 1.5px solid #8b8c89;
-            margin: 0;
-            padding: 0;         }
-    
-        tbody {
-            border: 1.5px solid #8b8c89;        }
-    
-        .weatherImage {
-            height: auto;
-            width: 50px;
-            align-content: center;      }
-    
-        td.weathTemp {
-            height: 200%;
-            width: 200%;
-            align-content: center;  }
+            margin: auto;   }
+
+        div#weather5Day h1 {
+            grid-column-start: 1;
+            grid-column-end:6;
+            grid-row-start: 1; 
+        
+            text-align: center;
+            font-size: 25px;
+            padding:  10px 0 2px 0;
+            margin: 0;}
+
+            
+        .day1,.day2, .day3, .day4, .day5 {
+
+            justify-items: center;
+            align-items: center;
+            
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 1.5rem;
+            border-left: .5px solid  #274c77;
+            border-top: 5px solid #274c77;
+            border-bottom: .5px solid #274c77;
+            background-color: #a3cef1;
+        
+            padding: 5px;
+            margin: 0;}   
+
+            .day1 {
+                grid-column-start:1;              grid-row-start:2;
+            
+                border-top-left-radius: 10px;}
+            .day2 {
+                grid-column-start:2;              grid-row-start:2; }
+            .day3 {
+                grid-column-start:3;              grid-row-start:2; }
+            .day4 {
+                grid-column-start:4;              grid-row-start:2; }
+            .day5 {
+                grid-column-start:5;              grid-row-start:2; 
+                border-top-right-radius: 10px;}
+   
+                
+            div.forecast { 
+                border-left: .5px solid #274c77;
+                grid-template-rows: 70px;
+            
+                display: subgrid;}
+
+            .last {
+                border-right: 3px solid #274c77;}
+            div.first, p.first {
+                border-left: 3px solid #274c77;}
+
+            img.forecast1, img.forecast2, img.forecast3, img.forecast4, img.forecast5 {
+
+                padding: 0;
+                margin: 0;  }
+            
+                img.forecast1 {
+                    grid-column-start:1;              grid-row-start:3; }
+                img.forecast2 {
+                    grid-column-start:2;              grid-row-start:3; }
+                img.forecast3  {
+                    grid-column-start:3;              grid-row-start:3; }
+                img.forecast4 {
+                    grid-column-start:4;              grid-row-start:3; }
+                img.forecast5  {
+                    grid-column-start:5;              grid-row-start:3; }
+
+
+            .temp1, .temp2, .temp3, .temp4, .temp5 {
+                grid-template-rows: 45px;
+
+                border-bottom: 3px solid #274c77;
+                border-left: .5px solid #274c77;
+                text-align: center;
+                padding-bottom: 10px;
+                margin: 0;  }
+
+                .temp1 {
+                    grid-column-start:1;              grid-row-start:4;
+                    border-bottom-left-radius: 10px; }
+                .temp2 {
+                    grid-column-start:2;              grid-row-start:4; }
+                .temp3 {
+                    grid-column-start:3;              grid-row-start:4; }
+                .temp4 {
+                    grid-column-start:4;              grid-row-start:4; }
+                .temp5 {
+                    grid-column-start:5;              grid-row-start:4;
+                    border-bottom-right-radius: 10px; }    
+
+
     
          /* Article format to include a lighter obaque background with a border */
     
@@ -104,11 +173,11 @@ main h2#thankYou {
     padding: .5rem;   }
 
 /* -------------- INDEX PAGE --------------------------*/
- 
+ @media screen and (min-width: 600px) {
 section#townName {
-    grid-template-columns: repeat(3,30%);
-    grid-column-gap: 1%; 
-   justify-content: center; }
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 5%; 
+   justify-content: center; }   }
 
 
 
@@ -120,7 +189,7 @@ section#townName {
              padding: 15px 20%; }
         }
 
-@media screen and (min-width:501px) {        
+@media screen and (min-width:670px) {        
         /* Styling the navigation menu */
             /* This hides the items in the Navigation list from the user's view until they hover over the "Menu" */
     
