--- a/assignments/weathersite/styles/small.css
+++ b/assignments/weathersite/styles/small.css
@@ -122,7 +122,7 @@ header.heading {
 
 		nav ul li a {
             display: block;
-			color:#274c77;
+			color:#ffffff; /*274C77 */
             text-decoration: none;
             font-size: 13px;
             padding: .5em;  		}
