--- a/assignments/weathersite/styles/small.css
+++ b/assignments/weathersite/styles/small.css
@@ -106,7 +106,7 @@ header.heading {
 		/* This hides the items in the Navigation list from the user's view until they hover over the "Menu" */
 		
         nav {
-            background-color: #6096ba;  }
+            background-color: #ffffff;  }
         
         nav ul {
 			list-style-type: none;
@@ -122,13 +122,13 @@ header.heading {
 
 		nav ul li a {
             display: block;
-			color:#ffffff; /*274C77 */
+			color:#274C77;
             text-decoration: none;
             font-size: 13px;
             padding: .5em;  		}
 
         nav ul li a.active {
-            background-color: rgba(39,76,119, .5);
+            background-color: rgba(39,76,119, .7);
             width: auto;
             color: #e7ecef;
             margin: 0;     }
