--- a/assignments/termProject/styles/small.css
+++ b/assignments/termProject/styles/small.css
@@ -40,79 +40,97 @@ h1,h2,h3,h4,h5,h6{
 /* Colors, style, floating, shapes, etc of main & secondary navs */
 
 /* Main Navigation Style */
-#mainnav {
-	padding: 0;
-	background-color: #E1AA7D;
-	color: #000000;
-	border-top: 2px solid #4F000B;
-	border-bottom: 1.75px solid #4F000B;
-	margin: 0;
-}
-#mainnav ul.hide {display: none;}
-#mainnav ul{
-  display: inline;
-}
-#mainnav li{
-	float: none;
-	list-style: none;
-	padding-right: 2rem; }
+.navbar {
+	font-family: Abril Fatface, Poppins, sans-serif;
+	overflow: hidden;
+	background-color: #E1AA7D; 	}
 
-#mainnav a {
-	display: block;
-	color: #000;
-	text-decoration: none;
-	padding: .5rem;	}
-
-#mainnav li>a {padding-left: 1.25rem;}
-
-
-#mainnav a:link, #secondnav a:link {
-	color: #000000;
-	/* other styles */
-	text-decoration: none;
-}
-#mainnav a:visited, #secondnav a:visited {
-	color: #000000;
-	/* other styles */
-}
-#mainnav a:hover #secondnav a:hover {
-	color: #2E4057;
-	background-color: #F4D35E;
-	border-radius: 2px;
-	/* other styles */
-}
-#mainnav a:active, #secondnav a:active {
-	background-color: #2E4057;
-	color: #E1AA7D;
-	border-radius: 5px;
-	/* other styles */
-}
-
-
-/* Secondary Navigation Style */
-#secondnav{
-	background-color: #E1AA7D;
-	padding: .5rem;
-	border-bottom: 2px solid #4F000B;
-	border-top: 1.75px solid #4F000B;
-	margin: 0;
-	font-size: 12px;
-	font-weight: lighter;
-
-}
-#secondnav ul{
-	display: inline;
-
-}
-#secondnav li{
+.navbar a, .navbar a:link, .navbar a:visited {
 	float: left;
-	padding-right: 1.25rem;
-	list-style: none;
+	display: block;
+	font-size: 16px;
+	color: #000000;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;	}
+
+	.active { background-color: #ffffff;
+		color:#4F000B;}
+
+	.navbar .icon { display:none;}
+
+.dropdown {
+	float: left;
+	overflow: hidden;	}
+
+.dropdown .dropbtn {
+	font-size: 16px;
+	border: none;
+	outline:none;
+	color: #000000;
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherit;
+	margin: 0;	}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+	color: #F4FAFF;
+	background-color: #4F000B;
+	border-radius: 2px;	}
+
+.dropdown-Content {
+	display: none;
+	position: absolute;
+	min-width: 160px;
+	background-color: #F4D35F;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,.2);
+	z-index: 1;		}
+
+.dropdown-Content a {
+	float: none;
+	color: #000000;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align:left;
 }
 
-	#secondnav li>a {
-		padding-left: 1.5rem;	}
+.dropdown-Content a:hover {
+	background-color: inherit;	}
 
+.dropdown:hover .dropdown-Content { display: block;}
+
+@media screen and (max-width: 600px) {
+	.navbar a:not(:first-child), .dropdown .dropbtn 
+	{display:none;}
+
+	.navbar a.icon { 
+		float:right;
+		display:block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.navbar.responsive {position: relative;}
+	.navbar.responsive .icon {
+		position:absolute;
+		right:0;
+		top:0;
+		font-size: 15px;	}
+
+	.navbar.responsive a {
+		float: none;
+		display: block;
+		text-align: left;		}
+		
+	.navbar.responsive .dropdown {float: none;}
+	.navbar.responsive .dropdown-Content {position: relative;}
+	.navbar.responsive .dropdown .dropbtn {
+		display: block;
+		width: 100%;
+		text-align: left;
+	}
+}
 
 /* ----------------------------------- */
 /* --------- HTML Elements ----------- */
